--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ATMSimulator
 excludes=
+file.reference.ATMSimulator-src=ATMSimulator/src
 includes=**
 jar.compress=false
 javac.classpath=
@@ -44,8 +45,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -91,5 +92,4 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.ATMSimulator-src}
